--- a/src/global.css
+++ b/src/global.css
@@ -2,14 +2,14 @@
     font-family: "Montserrat";
     font-weight: 400;
     font-style: normal;
-    src: url('src/fonts/Montserrat-Regular.ttf') format('ttf');
+    src: url('fonts/Montserrat-Regular.ttf') format('ttf');
 }
 
 @font-face {
     font-family: "Montserrat";
     font-weight: 700;
     font-style: normal;
-    src: url('src/fonts/Montserrat-Bold.ttf') format('ttf');
+    src: url('fonts/Montserrat-Bold.ttf') format('ttf');
 }
 /* Box sizing rules */
 *,
@@ -22,7 +22,6 @@
 html {
     -moz-text-size-adjust: none;
     -webkit-text-size-adjust: none;
-    text-size-adjust: none;
 }
 
 /* Remove default margin in favour of better control in authored CSS */
@@ -47,12 +46,6 @@ body {
 h1, h2, h3, h4,
 button, input, label {
     line-height: 1.1;
-}
-
-/* Balance text wrapping on headings */
-h1, h2,
-h3, h4 {
-    text-wrap: balance;
 }
 
 /* FW */
@@ -94,5 +87,4 @@ textarea:not([rows]) {
 
 * {
     font-family: 'Montserrat', sans-serif;
-    font-size: 18px;
 }
